--- a/E-commerce_back/package.json
+++ b/E-commerce_back/package.json
@@ -9,29 +9,36 @@
     "test": "jest",
     "setup": "node scripts/setup.js"
   },
-  "keywords": ["express", "mongodb", "mongoose", "e-commerce", "collaboration"],
+  "keywords": [
+    "express",
+    "mongodb",
+    "mongoose",
+    "e-commerce",
+    "collaboration"
+  ],
   "author": "四人协作团队",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
+    "alipay-sdk": "^4.14.0",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "compression": "^1.7.4",
     "express-validator": "^7.0.1",
-    "bcryptjs": "^2.4.3",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=16.0.0"
   }
-} 
+}
